<resources>
    <string name="app_name" translatable="false">AirChecker</string>

    <string name="hello_world">Hello Android !</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="cell_city_name">Unknown</string>
    <string name="cell_city_location">GPS : (not found)</string>
    <string name="cell_city_minTemp">Min : 0 °C</string>
    <string name="cell_city_maxTemp">Max : 0 °C</string>
    <string name="emptyRecycler">No city added !</string>
    <string name="share_air_quality_mail_subject">Result of air quality</string>
    <string name="share_air_quality_mail_body">Hello,\nHere is the result of the air quality at \'%1$s\' : %2$d\n\nFetched by %3$s</string>
    <string name="delete_confirmation">Are you sure to delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_city">Add new city</string>
    <string name="validate_action">OK</string>
    <string name="add_action">Add</string>
    <string name="cancel_action">Cancel</string>
    <string name="choose_location">Choose a location</string>
    <string name="city_not_found">City not found, please check again and try again.</string>
    <string name="change_language_title">Change language</string>
    <string name="change_theme_title">Change theme</string>
    <string name="pref_cat_customize">Customization</string>

    <string name="theme_darken">Darken theme</string>
    <string name="theme_darken_alias" translatable="false">theme_darken</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_light_alias" translatable="false">theme_light</string>

    <string name="language_english">English</string>
    <string name="language_english_alias" translatable="false">en_EN</string>
    <string name="language_french">French</string>
    <string name="language_french_alias" translatable="false">fr_FR</string>
    <string name="pref_cat_customize_summary">Edit global app interface</string>
    <string name="service_killed">Service destroyed</string>
    <string name="service_checking">Checking air quality...</string>
    <string name="theme_sunset">Sunset theme</string>
    <string name="theme_sunset_alias" translatable="false">theme_sunset</string>
    <string name="set_auto_night_theme">Automatic night mode</string>
    <string name="city_details" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod nibh diam, sit amet sodales elit hendrerit nec. Maecenas blandit sapien nisl, mollis dapibus nunc dictum sed. Morbi ac purus vitae magna tristique iaculis porttitor in libero. Vivamus libero massa, gravida nec malesuada sit amet, molestie at felis. In facilisis arcu vitae tortor euismod, vel semper nisi tempor. Nam sit amet dui ut ipsum laoreet pulvinar. In dapibus magna eu leo finibus consectetur. Cras varius mauris sit amet pretium scelerisque.</string>
    <string name="graph_button">Evolution</string>
    <string name="city_empty_title">City not found</string>
    <string name="city_empty_informations">No data found concerning city</string>
    <string name="city_name_default" translatable="false">Grenoble</string>
    <string name="loading">Loading...</string>
    <string name="push_alert_title">Pollution alert</string>
    <string name="push_alert_content">Be aware, %1$s exceeded the critical pollution threshold (%2$d)</string>
</resources>
